--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": ">=18.x"
   },
   "dependencies": {
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.8",
