--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-session": "^1.18.0",
+    "firebase": "^11.5.0",
+    "firestore": "^1.1.6",
     "mui": "^0.0.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
